# UCSD_MJM_Data_Download

./: .gitattributes  .gitignore  ImageDownloadReadMe.md  ReadMe.md  TF_Install_LL.md  data.dvc  gdrive_oauth.json  pyproject.toml  setup - Copy.md  token.json
.dvc/: config
notebooks/: doctr_basic.ipynb  download_images.ipynb  how_to.md  main_v1.ipynb  token.json
src/: download_images.py
