[tool.poetry]
name = "ucsd-mjm-capstone"
version = "0.1.0"
description = ""
authors = [
    "asmith81 <alden.w.smith.iii@gmail.com>"
]
readme = "README.md"
packages = [
    { include = "src" }  
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
dvc = ">=3.59.0,<4.0.0"
numpy = ">=1.26.0,<2.1.0"
pandas = ">=2.2.3,<3.0.0"
scipy = ">=1.15.1,<2.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
matplotlib = ">=3.10.0,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
google-auth-oauthlib = ">=1.2.1,<2.0.0"
google-api-python-client = ">=2.160.0,<3.0.0"
google-auth-httplib2 = ">=0.2.0,<0.3.0"
pymupdf = ">=1.25.2,<2.0.0"
pillow = ">=11.1.0,<12.0.0"
ipykernel = ">=6.29.5,<7.0.0"
git-lfs = ">=1.6,<2.0"
rapidfuzz = "^3.12.1"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.15.0"
jupyter = "^1.1.1"
python-doctr = "^0.11.0"
tf2onnx = "^1.16.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
